# cocoa-flame

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  code_evaluator.py  detect.py  engine.py  extract_features.py  feature_extraction.ipynb  main.py  main_old.py  setup.sh  test.py  train.py  train_svm.py  train_zhr.py
data/: __init__.py  dataset.py
datasets/: __init__.py  dataset.py
datasets/dv_fire/: clip_aedat.py  dv_fire.py
datasets/flade/: __init__.py  flade.py
models/: __init__.py  common.py  point_mlp.py  tmp.py  transformer.py
models/functions/: __init__.py  entropy_loss.py  multi_center_loss.py
models/point_mlp/: point_mlp.py
models/scout/: CMakeLists.txt  flame_scout.cpp  flame_scout.h
utils/: boxes.py  engine.py  eval.py  misc.py  plot.py
