cmake_minimum_required(VERSION 3.5.1)
project(flame_scout)

# Configurable features
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

# Configurable features
set(CMAKE_BUILD_TYPE "DEBUG")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Ofast")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/models/scout)

# Find dv-runtime supports
find_package(dv REQUIRED)

# Find OpenCV supports
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})

# Include external headers
add_subdirectory(external)

# Include models
add_subdirectory(models/scout)
